# midb

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.dev/kek/: __init__.py  cpool.pyi  cpool.pyx  dtypes.pxd  dtypes.pyi  pool.py  pool.pyi
.dev/postgres/: README.md  __init__.py  pool.pyx
examples/: __init__.py
examples/postgres/: __init__.py  advanced_features.py  check_types.py  connection.py  crud.py  crud_no_cleanup.py  parameters.py  pool.py  pool_context.py  pool_examples.py  schema_validation.py  timescale.py  timescale_examples.py  tsdb_manager.py
midb/: __init__.py
midb/postgres/: __init__.pxd  __init__.py  connection.py  connection.pyi  dtypes.pxd  dtypes.pyi  dtypes.pyx  parameters.pxd  parameters.pyi  parameters.pyx  pool.py  pool.pyi  schema.pyx  timescale.pxd  timescale.pyi  timescale.pyx
tests/: __init__.py  test_async_behavior.py  test_connection_pool.py  test_error_handling.py  test_integration.py  test_manager.py  test_postgres.py  test_sql_builder.py
